Cambios en cv.json e iconos

--- a/src/components/sections/Skills.astro
+++ b/src/components/sections/Skills.astro
@@ -11,6 +11,11 @@ import Git from "@/icons/git.astro"
 import GitHub from "@/icons/GitHub.astro"
 import Tailwind from "@/icons/tailwind.astro"
 import Next from "@/icons/next.astro"
+import Bootstrap from "@/icons/bootstrap.astro"
+import Flask from "@/icons/flask.astro"
+import Django from "@/icons/django.astro"
+import Wordpress from "@/icons/wordpress.astro"
+import Python from "@/icons/python.astro"
 import { skills } from "@cv"
 
 const SKILLS_ICONS: Record<string, any> = {
@@ -24,7 +29,12 @@ const SKILLS_ICONS: Record<string, any> = {
   Git,
   GitHub,
   Next,
+  Bootstrap,
   Tailwind,
+  Flask,
+  Django,
+  Python,
+  Wordpress,
 }
 ---
 
