--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -3,25 +3,23 @@ import { basics } from "@cv"
 import Section from "@/components/Section.astro"
 import Mail from "@/icons/Mail.astro"
 import Phone from "@/icons/Phone.astro"
-import X from "@/icons/X.astro"
 import LinkedIn from "@/icons/LinkedIn.astro"
 import GitHub from "@/icons/GitHub.astro"
 import WorldMap from "@/icons/WorldMap.astro"
 import type { SocialIcon } from "@/types"
 
-const { name, label, image, location, profiles, phone, email } = basics
+const { name, label, image, location, profiles, email } = basics
 const { city, region } = location
 
 const SOCIAL_ICONS: SocialIcon = {
   GitHub,
   LinkedIn,
-  X,
 }
 
 const linkedInfo = profiles.find(({ network }) => network === "LinkedIn")
 const linkedUrl = linkedInfo?.url
 
-const printInfo = [email, phone, linkedUrl].filter(Boolean).join(" • ")
+const printInfo = [email, linkedUrl].filter(Boolean).join(" • ")
 ---
 
 <Section>
@@ -37,8 +35,9 @@ const printInfo = [email, phone, linkedUrl].filter(Boolean).join(" • ")
         {printInfo}
       </footer>
       <footer class="no-print">
-        {
-          email && (
+        <p>
+          <!-- <span>{email}</span> -->
+          {email && (
             <a
               href={`mailto:${email}`}
               title={`Enviar un correo electrónico a ${name} al correo ${email}`}
@@ -47,20 +46,9 @@ const printInfo = [email, phone, linkedUrl].filter(Boolean).join(" • ")
             >
               <Mail />
             </a>
-          )
-        }
-        {
-          phone && (
-            <a
-              href={`tel:${phone}`}
-              title={`Llamar por teléfono a ${name} al número ${phone}`}
-              target="_blank"
-              rel="noopener noreferrer"
-            >
-              <Phone />
-            </a>
-          )
-        }
+          )}
+        </p>
+
         {
           profiles.map(({ network, url, username }) => {
             const Icon = SOCIAL_ICONS[network]
@@ -92,6 +80,13 @@ const printInfo = [email, phone, linkedUrl].filter(Boolean).join(" • ")
     align-items: center;
     justify-content: space-between;
     gap: 1rem;
+  }
+
+  p{
+    display: flex;
+    align-items: center;
+    border: 1px solid #eee;
+    border-radius: 6px;
   }
 
   .info {
