English language and email button

--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -2,7 +2,7 @@
 import { basics } from "@cv"
 import Section from "@/components/Section.astro"
 import Mail from "@/icons/Mail.astro"
-import Phone from "@/icons/Phone.astro"
+import Copy from "@/icons/copy.astro"
 import LinkedIn from "@/icons/LinkedIn.astro"
 import GitHub from "@/icons/GitHub.astro"
 import WorldMap from "@/icons/WorldMap.astro"
@@ -14,6 +14,7 @@ const { city, region } = location
 const SOCIAL_ICONS: SocialIcon = {
   GitHub,
   LinkedIn,
+  Copy,
 }
 
 const linkedInfo = profiles.find(({ network }) => network === "LinkedIn")
@@ -21,6 +22,20 @@ const linkedUrl = linkedInfo?.url
 
 const printInfo = [email, linkedUrl].filter(Boolean).join(" • ")
 ---
+
+<script>
+  const mailElement = document.querySelector(".mail.copy");
+  mailElement.addEventListener('click', (e)=> {
+    e.preventDefault();
+    const emailDisplay = document.getElementById("emailDisplay");
+    emailDisplay.textContent = "Copy!";
+    setTimeout(() => {
+      emailDisplay.textContent = "rawraul@outlook.com";
+    }, 2000); // Cambiar de vuelta a la dirección de correo después de 2 segundos
+    navigator.clipboard.writeText('rawraul@outlook.com');
+    console.log('Email copied!');
+  });
+</script>
 
 <Section>
   <div class="container">
@@ -35,18 +50,9 @@ const printInfo = [email, linkedUrl].filter(Boolean).join(" • ")
         {printInfo}
       </footer>
       <footer class="no-print">
+
         <p>
-          <!-- <span>{email}</span> -->
-          {email && (
-            <a
-              href={`mailto:${email}`}
-              title={`Enviar un correo electrónico a ${name} al correo ${email}`}
-              target="_blank"
-              rel="noopener noreferrer"
-            >
-              <Mail />
-            </a>
-          )}
+          <span id="emailDisplay">{email}</span> <a class="mail copy"><Copy/></a>
         </p>
 
         {
@@ -87,6 +93,10 @@ const printInfo = [email, linkedUrl].filter(Boolean).join(" • ")
     align-items: center;
     border: 1px solid #eee;
     border-radius: 6px;
+  }
+
+  p span {
+    padding-inline: 6px;
   }
 
   .info {
