--- a/src/components/sections/Projects.astro
+++ b/src/components/sections/Projects.astro
@@ -5,7 +5,7 @@ import Section from "../Section.astro"
 import { projects } from "@cv"
 ---
 
-<Section title="Proyectos">
+<Section title="Proyects">
   <ul>
     {
       projects.map(
@@ -96,6 +96,11 @@ import { projects } from "@cv"
     gap: 4px;
     font-size: 0.6rem;
   }
+
+  object {
+    /* display: block; */
+    /* vertical-align: middle; */
+}
 
   footer span {
     border-radius: 6px;
