--- a/src/components/sections/Skills.astro
+++ b/src/components/sections/Skills.astro
@@ -38,7 +38,7 @@ const SKILLS_ICONS: Record<string, any> = {
 }
 ---
 
-<Section title="Habilidades">
+<Section title="Skills">
   <ul>
     {
       skills.map(({ name }) => {
