--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,12 +15,16 @@ const { name, label } = basics
 
 <Layout title={`Portafolio de ${name} - ${label}`}>
   <main>
+    <div class="fixed inset-0 -z-10 h-full w-full bg-white bg-[linear-gradient(to_right,#8080800a_1px,transparent_1px),linear-gradient(to_bottom,#8080800a_1px,transparent_1px)] bg-[size:14px_24px]"></div>
+
     <Hero />
     <About />
     <Experience />
     <Projects />
     <Skills />
     <Education />
+
+
   </main>
 
   <KeyboardManager />
