--- a/src/components/sections/Projects.astro
+++ b/src/components/sections/Projects.astro
@@ -70,6 +70,8 @@ import { projects } from "@cv"
 
   article h3 {
     margin-bottom: 4px;
+    display: flex;
+    align-items: center;
   }
 
   article a {
@@ -88,6 +90,7 @@ import { projects } from "@cv"
 
   article h3 span {
     color: rgb(0, 188, 47);
+    margin-left: 4px;
   }
 
   footer {
@@ -97,11 +100,9 @@ import { projects } from "@cv"
     font-size: 0.6rem;
   }
 
-  object {
-    /* display: block; */
-    /* vertical-align: middle; */
-}
-
+  .github-code-link[data-astro-cid-44zkpkd5] {
+    margin-left: 5px;
+  }
   footer span {
     border-radius: 6px;
     background: #eee;
