Email button styles 2

--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -57,7 +57,7 @@ const printInfo = [email, linkedUrl].filter(Boolean).join(" • ")
       <footer class="no-print">
 
         <p>
-          <span id="emailDisplay">{email}</span> <a class="mail copy"><Copy/></a>
+          <span id="emailDisplay">rawraul@outlook.com</span> <a class="mail copy"><Copy/></a>
         </p>
 
         {
