--- a/src/components/sections/Skills.astro
+++ b/src/components/sections/Skills.astro
@@ -16,6 +16,7 @@ import Flask from "@/icons/flask.astro"
 import Django from "@/icons/django.astro"
 import Wordpress from "@/icons/wordpress.astro"
 import Python from "@/icons/python.astro"
+import SASS from "@/icons/sass.astro"
 import { skills } from "@cv"
 
 const SKILLS_ICONS: Record<string, any> = {
@@ -34,6 +35,7 @@ const SKILLS_ICONS: Record<string, any> = {
   Flask,
   Django,
   Python,
+  SASS,
   Wordpress,
 }
 ---
