--- a/src/components/sections/About.astro
+++ b/src/components/sections/About.astro
@@ -2,11 +2,13 @@
 import Section from "../Section.astro"
 
 import { basics } from "@cv"
-const { summary } = basics
+const { summary, summary2 } = basics
 ---
 
 <Section title="About">
   <p>
     {summary}
   </p>
+  <br/>
+  <p>{summary2}</p>
 </Section>
