--- a/src/components/sections/Education.astro
+++ b/src/components/sections/Education.astro
@@ -7,7 +7,7 @@ import { education } from "@cv"
 <Section title="Education">
   <ul>
     {
-      education.map(({ institution, startDate, endDate, area }) => {
+      education.map(({ institution, startDate, endDate, areaCurrent, courses ,area, area2, area3, area4, area5, area6, area7, area8, area9, area10 }) => {
         const startYear = new Date(startDate).getFullYear()
         const endYear =
           endDate != null ? new Date(endDate).getFullYear() : "Actual"
@@ -20,12 +20,17 @@ import { education } from "@cv"
                 <div>
                   <h3>{institution}</h3>
                 </div>
-
                 <time>{years}</time>
               </header>
 
               <footer>
+                <p>{areaCurrent}</p>
                 <p>{area}</p>
+                <p>{area2}</p>
+                <p>{area3}</p>
+                <p>{area4}</p>
+                <p>{area5}</p>
+                <p>{area6}</p>
               </footer>
             </article>
           </li>
