--- a/src/components/sections/Projects.astro
+++ b/src/components/sections/Projects.astro
@@ -5,7 +5,7 @@ import Section from "../Section.astro"
 import { projects } from "@cv"
 ---
 
-<Section title="Proyects">
+<Section title="Projects">
   <ul>
     {
       projects.map(
