--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -186,6 +186,7 @@ const printInfo = [email, linkedUrl].filter(Boolean).join(" • ")
   footer a:hover {
     background: #eee;
     border: 1px solid #ddd;
+    cursor: none;
   }
 
   @media (width <= 700px) {
