--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,124 +1,147 @@
 ---
-import { basics } from "@cv"
+import { basics } from "@cv";
 
 interface Props {
-  title: string
+	title: string;
 }
 
-const { title } = Astro.props
+const { title } = Astro.props;
 
-const { image, summary, url } = basics
+const { image, summary, url } = basics;
 ---
 
 <!doctype html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <title>{title}</title>
-    <meta name="description" content={summary} />
-    <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="preload" as="image" href={image} />
+	<head>
+		<meta charset="UTF-8" />
+		<title>{title}</title>
+		<meta name="description" content={summary} />
+		<meta name="viewport" content="width=device-width" />
+		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="preload" as="image" href={image} />
 
-    <meta property="og:url" content={url} />
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content={title} />
-    <meta property="og:description" content={summary} />
-    <meta property="og:image" content="" />
+		<meta property="og:url" content={url} />
+		<meta property="og:type" content="website" />
+		<meta property="og:title" content={title} />
+		<meta property="og:description" content={summary} />
+		<meta property="og:image" content="" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta property="twitter:domain" content={url.split("//")[1] ?? ''} />
-    <meta property="twitter:url" content={url} />
-    <meta name="twitter:title" content={title} />
-    <meta name="twitter:description" content={summary} />
-    <meta name="twitter:image" content="" />
-  </head>
-  <body>
-    <slot />
-  </body>
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta property="twitter:domain" content={url.split("//")[1] ?? ""} />
+		<meta property="twitter:url" content={url} />
+		<meta name="twitter:title" content={title} />
+		<meta name="twitter:description" content={summary} />
+		<meta name="twitter:image" content="" />
+	</head>
+	<body>
+		<slot />
+		<div class="cursor"></div>
+		<script>
+			const cursor = document.querySelector(".cursor") as HTMLElement;
+			if (cursor) {
+				document.addEventListener("mousemove", (e) => {
+					cursor.style.left = e.pageX + "px";
+					cursor.style.top = e.pageY + "px";
+				});
+			}
+		</script>
+	</body>
 </html>
 
 <style is:global>
-  html {
-    font-family:
-      Menlo,
-      Monaco,
-      Lucida Console,
-      "Courier New",
-      Courier,
-      monospace;
-    background: #fff;
-    letter-spacing: -0.025rem;
-  }
+	html {
+		font-family:
+			Menlo,
+			Monaco,
+			Lucida Console,
+			"Courier New",
+			Courier,
+			monospace;
+		background: #fff;
+		letter-spacing: -0.025rem;
+		cursor: none;
+	}
 
-  body,
-  figure {
-    margin: 0;
-    padding: 0;
-  }
+	body,
+	figure {
+		margin: 0;
+		padding: 0;
+	}
 
-  a {
-    text-decoration: none;
-  }
+	a {
+		text-decoration: none;
+	}
 
-  ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-  }
+	ul {
+		list-style: none;
+		margin: 0;
+		padding: 0;
+	}
 
-  *,
-  *::before,
-  *::after {
-    box-sizing: border-box;
-  }
+	*,
+	*::before,
+	*::after {
+		box-sizing: border-box;
+	}
 
-  h1,
-  h2,
-  h3,
-  h4 {
-    margin: 0;
-    font-family:
-      system-ui,
-      -apple-system,
-      BlinkMacSystemFont,
-      "Segoe UI",
-      Roboto,
-      Oxygen,
-      Ubuntu,
-      Cantarell,
-      "Open Sans",
-      "Helvetica Neue",
-      sans-serif;
-  }
+	h1,
+	h2,
+	h3,
+	h4 {
+		margin: 0;
+		font-family:
+			system-ui,
+			-apple-system,
+			BlinkMacSystemFont,
+			"Segoe UI",
+			Roboto,
+			Oxygen,
+			Ubuntu,
+			Cantarell,
+			"Open Sans",
+			"Helvetica Neue",
+			sans-serif;
+	}
 
-  p {
-    color: #666;
-    font-size: 0.9rem;
-    line-height: 1.5;
-    margin: 0;
-    text-wrap: pretty;
-  }
+	p {
+		color: #666;
+		font-size: 0.9rem;
+		line-height: 1.5;
+		margin: 0;
+		text-wrap: pretty;
+	}
 
-  .print {
-    display: none !important;
-  }
+	.print {
+		display: none !important;
+	}
 
-  @media print {
-    .no-print {
-      display: none !important;
-    }
+	@media print {
+		.no-print {
+			display: none !important;
+		}
 
-    .print {
-      display: block !important;
-    }
+		.print {
+			display: block !important;
+		}
 
-    astro-dev-toolbar {
-      display: none !important;
-    }
+		astro-dev-toolbar {
+			display: none !important;
+		}
 
-    article {
-      break-inside: avoid;
-    }
-  }
+		article {
+			break-inside: avoid;
+		}
+	}
+
+	.cursor {
+		position: absolute;
+		width: 20px;
+		background-color: transparent;
+    border: 1px solid black;
+		height: 20px;
+		border-radius: 50%;
+		transition: 0.1s;
+		pointer-events: none;
+
+	}
 </style>
